# mahalanobis-career-recsys

./: .gitignore  README.md
api/: .gitignore  README.md  main.py  models.py  pyproject.toml
api/services/: recommender.py
client/: .gitignore  README.md  package.json  pnpm-lock.yaml
client/.next/types/: routes.d.ts  validator.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/arquetipo/: page.tsx
client/src/app/fundamentos/: page.tsx
client/src/app/perfil/: page.tsx
client/src/data/: dimensions.ts
data/: careers.csv  cuestionario_profesionales.md  students.csv
research/: README.md  data_generator.py  main.py  pyproject.toml  recommender.py
