[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "uvicorn>=0.49.0",
]
